<resources>
    <string name="app_name">MovieExplorer</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="genres">Genres :</string>
    <string name="country">Country :</string>
    <string name="year">Year :</string>
    <string name="imdb">IMDB :</string>
    <string name="search">Search</string>
    <string name="enable_internet">Enable the internet connection</string>
    <string name="unknown_error">Unknown error occurred</string>
    <string name="description">Description</string>
    <string name="movie_description">Plot: %s \n\n Actors: %s \n\n Writer: %s \n\n Awards: %s \n</string>
    <string name="detail">Detail</string>
    <string name="delete_favorite_movies">Delete Favorite Movies</string>
    <string name="delete_favorite_dialog_message">Are you sure?</string>
    <string name="delete_favorite_dialog_positive_button">Yes</string>
    <string name="delete_favorite_dialog_negative_button">Cancel</string>
    <string name="delete_favorite_dialog_title">Deleting</string>
    <string name="retry">Retry</string>
    <string name="deleted">Deleted!</string>
    <string name="undo">Undo</string>
</resources>