<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete_favorite_items"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_favorite_movies"
        app:showAsAction="ifRoom" />
</menu>